# openkeeper-cli

./: .gitignore  Makefile  Makefile.in  README.md  README.org  configure  configure.ac  install.sh  ok  ok-config  ok-connect  ok-refresh  ok-start  ok-start.in  ok-stop  ok.in  pap-secrets  pppoe.conf  uninstall.sh
PKGBUILD/: PKGBUILD
diallinux_v1.0_src_a/: CString.cpp  CString.h  CXKUsername.cpp  CXKUsername.h  MD5.cpp  MD5.h  Makefile  dail.cpp  dail.h
dialnetkeeper/: Makefile  dialnetkeeper.c  dialnetkeeper.h  dist.sh
release/: openkeeper-cli-2.0-1-x86_64.pkg.tar  openkeeper-cli-2.0-1.x86_64.deb  openkeeper-cli-2.0-1.x86_64.rpm  openkeeper-cli-2.0-3-x86_64.pkg.tar  openkeeper-cli-2.0-4-x86_64.pkg.tar
rpm/SPECS/: openkeeper-cli.spec
src/: dialnetkeeper.c  dialnetkeeper.h
